<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_dialog_background"
    android:layout_marginStart="@dimen/dialog_margin_start_end"
    android:layout_marginEnd="@dimen/dialog_margin_start_end"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info_outline_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/label_margin_top"
        android:layout_marginStart="@dimen/list_margin_start_end"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="@dimen/value_text_size"
        android:textColor="@color/value_text_color"
        app:layout_constraintTop_toTopOf="@id/iv_info"
        app:layout_constraintBottom_toBottomOf="@id/iv_info"
        app:layout_constraintStart_toEndOf="@id/iv_info"
        android:layout_marginStart="@dimen/list_margin_start_end"/>

    <TextView
        android:id="@+id/tv_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_body"
        android:textSize="@dimen/value_text_size"
        android:textColor="@color/value_text_color"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/iv_info"
        app:layout_constraintStart_toStartOf="@id/iv_info"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/list_margin_start_end"
        android:layout_marginTop="@dimen/label_margin_top"/>

    <TextView
        android:id="@+id/tv_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/again"
        android:textSize="@dimen/value_text_size"
        android:textColor="@color/value_text_color"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_body"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_marginBottom="@dimen/label_margin_top"/>

</androidx.constraintlayout.widget.ConstraintLayout>